# EnlyAI

./: .gitignore  README.md  pyproject.toml  启动.bat
config/: default.yaml
config/presets/: avatar_voice_library.yaml  scene_templates.yaml
docker/: Dockerfile.local  docker-compose.yml
docs/: DEPLOYMENT.md
docs/contest/: AI主理人报名帖.md  EnlyAI创意提案.html  generate_cover.py  报名帖文案.md
krvoiceai/: app.py
krvoiceai/api/: avatar_server.py
krvoiceai/core/: base_module.py  config.py  ffmpeg_utils.py  hardware_probe.py  llm_client.py  settings_manager.py  wav2lip_service.py
krvoiceai/modules/: avatar_engine.py  broll_engine.py  cover_generator.py  longcat_avatar_engine.py  longcat_server.py  musetalk_avatar_engine.py  musetalk_server.py  podcast_engine.py  publisher.py  script_extractor.py  script_writer.py  subtitle_engine.py  subtitle_styler.py  tts_engine.py  video_composer.py
krvoiceai/pipeline/: orchestrator.py  state.py
krvoiceai/ui/: cli.py  gradio_app.py
krvoiceai/web/: server.py
krvoiceai/web/static/: index.html
krvoiceai/web/static/css/: style.css
krvoiceai/web/static/js/: app.js  settings.js
scripts/: pregen_lancer_sample.py  pregenerate_voice_samples.py  setup_cloud_gpu.sh  setup_wav2lip_env.bat  start_wav2lip_server.bat
tests/: test_acceptance_e2e.py  test_api_servers.py  test_avatar_engine.py  test_pipeline_e2e.py  test_scaffold.py  test_script_extractor.py  test_tts_engine.py
